[package]
name = "pump-kmonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
rand = "0.9.1"
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rust_decimal = "1.37.1"
serde = "1.0.219"
serde_json = "1.0.140"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
spl-token = "8.0.0"
redis = { version = "0.32.0", features = [
    "tokio-comp",
    "connection-manager",
    "aio",
] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = [
    "rustls-tls-webpki-roots",
] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# Web server dependencies
axum = "0.7.9"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
hyper = "1.5.1"
